--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,14 @@
 <html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/pwa-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1f2937" />
-    <title>Practice 佛修紀錄</title>
+    <title>Practice</title>
   </head>
   <body class="bg-slate-100 text-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
